docs: расширена документация websocket
