# docs/swagger.json
@@ -1880,6 +1880,42 @@
                 }
             }
         },
+        "/ws/offers": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Подключение для получения событий CRUD по офферам.",
+                "tags": [
+                    "offers"
+                ],
+                "summary": "WebSocket обновления офферов",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "канал",
+                        "name": "channel",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "101": {
+                        "description": "Switching Protocols",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.OfferEvent"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/ws/orders": {
             "get": {
                 "security": [
@@ -1887,7 +1923,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Подписка на события по ордерам клиента",
+                "description": "После подключения авторизованный клиент получает события OrderEvent о создании своих ордеров.",
                 "tags": [
                     "orders"
                 ],
@@ -1896,7 +1932,7 @@
                     "101": {
                         "description": "Switching Protocols",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.OrderEvent"
                         }
                     },
                     "401": {
@@ -1915,7 +1951,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "При подключении отправляет историю сообщений из кеша Redis",
+                "description": "Подключает покупателя и продавца к чату ордера.",
                 "tags": [
                     "orders"
                 ],
@@ -1933,7 +1969,7 @@
                     "101": {
                         "description": "Switching Protocols",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.OrderMessage"
                         }
                     },
                     "403": {
@@ -1958,7 +1994,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Отправляет события изменения статуса ордера.",
+                "description": "Позволяет автору и владельцу оффера получать события OrderStatusEvent при каждом изменении статуса указанного ордера.",
                 "tags": [
                     "orders"
                 ],
@@ -1976,7 +2012,7 @@
                     "101": {
                         "description": "Switching Protocols",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/handlers.OrderStatusEvent"
                         }
                     },
                     "403": {
@@ -2194,6 +2230,18 @@
                 }
             }
         },
+        "handlers.OfferEvent": {
+            "type": "object",
+            "properties": {
+                "offer": {
+                    "$ref": "#/definitions/models.OfferFull"
+                },
+                "type": {
+                    "type": "string",
+                    "example": "created"
+                }
+            }
+        },
         "handlers.OfferRequest": {
             "type": "object",
             "properties": {
@@ -2232,6 +2280,18 @@
                 }
             }
         },
+        "handlers.OrderEvent": {
+            "type": "object",
+            "properties": {
+                "order": {
+                    "$ref": "#/definitions/models.OrderFull"
+                },
+                "type": {
+                    "type": "string",
+                    "example": "order.created"
+                }
+            }
+        },
         "handlers.OrderMessageRequest": {
             "type": "object",
             "properties": {
@@ -2254,6 +2314,18 @@
                 },
                 "pin_code": {
                     "type": "string"
+                }
+            }
+        },
+        "handlers.OrderStatusEvent": {
+            "type": "object",
+            "properties": {
+                "order": {
+                    "$ref": "#/definitions/models.OrderFull"
+                },
+                "type": {
+                    "type": "string",
+                    "example": "order.status_changed"
                 }
             }
         },
